--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@100;300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
         <div class="content">
             <header>
                 <img src="/assets/logo.svg" alt="logomarca">
-                <a href="#"> <span></span>
+                <a href="/create-point.html"> <span></span>
                     Cadestre um ponto de coleta </a>
             </header>
             <main>
@@ -35,5 +36,24 @@
     </div>
 
 
+    <div id="modal" class="hide">
+        <div class="content">
+            <div class="header">
+                <h1>Pontos de coleta</h1>
+                <a href="#">Fechar</a>
+            </div>
+            <form action="/search-results.html">
+                <label for="search">Cidade</label>
+                <div class="search field">
+                    <input type="text" name="search" placeholder="Pesquise por Cidade">
+                    <button>
+                        <img src="/assets/search.svg" alt="buscar">
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+<script src="/scripts/index.js"></script>
 </body>
 </html>
